# iroh-ffi-gossip

./: .gitignore  Cargo.toml  README.md  pyproject.toml  uniffi.toml
python/: test.py
src/: error.rs  gossip.rs  lib.rs
